<resources>
    <string name="app_name">Nav</string>
    <string name="app_subname">drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Navigation</string>
    <string name="nav_header_subtitle">zxa011023@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_lang">TW</string>
    <string name="action_about">About us</string>
    <string name="action_reload">Reload</string>

    <!-- Card View -->
    <array name="array_images">
        <item>@drawable/img_baseball</item>
        <item>@drawable/img_badminton</item>
        <item>@drawable/img_basketball</item>
        <item>@drawable/img_bowling</item>
        <item>@drawable/img_cycling</item>
        <item>@drawable/img_golf</item>
        <item>@drawable/img_running</item>
        <item>@drawable/img_soccer</item>
        <item>@drawable/img_swimming</item>
        <item>@drawable/img_tabletennis</item>
        <item>@drawable/img_tennis</item>
    </array>
    <array name="array_title">
        <item>棒球</item>
        <item>羽球</item>
        <item>籃球</item>
        <item>保齡球</item>
        <item>腳踏車</item>
        <item>高爾夫</item>
        <item>跑步</item>
        <item>足球</item>
        <item>游泳</item>
        <item>桌球</item>
        <item>網球</item>
    </array>
    <array name="array_info">
        <item>baseball</item>
        <item>badminton</item>
        <item>basketball</item>
        <item>bowling</item>
        <item>cycling</item>
        <item>golf</item>
        <item>running</item>
        <item>soccer</item>
        <item>swimming</item>
        <item>tabletennis</item>
        <item>tennis</item>
    </array>
    <string name="title_activity_settings">Settings</string>

    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_description_theme">Theme Style Setting</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name"></string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!--  Data & Sync settings -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!--  Notifications settings -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

</resources>
