<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_lang"
        android:orderInCategory="10"
        android:title="@string/action_lang"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/ic_autorenew_black_24dp"
        android:orderInCategory="20"
        android:title="@string/action_reload"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="30"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:orderInCategory="40"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>
